After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657522 - directdrawsink: Fix warnings on 64 bit mingw-w64
directdrawsink: Fix warnings on 64 bit mingw-w64
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Windows
: Normal minor
: 0.10.24
Assigned To: David Schleef
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-08-27 17:58 UTC by Raimo Järvi
Modified: 2012-02-14 00:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix warnings (1.29 KB, patch)
2011-08-27 18:09 UTC, Raimo Järvi
committed Details | Review

Description Raimo Järvi 2011-08-27 17:58:09 UTC
Compiling with 64 bit mingw-w64 produces some warnings:

gstdirectdrawsink.c:1561:24: error: assignment from incompatible pointer type
gstdirectdrawsink.c:2028:3: error: format '%d' expects type 'int', but argument 8 has type 'size_t'
Comment 1 Raimo Järvi 2011-08-27 18:09:36 UTC
Created attachment 194935 [details] [review]
Fix warnings
Comment 2 David Schleef 2011-08-30 23:28:07 UTC
Looks good.
Comment 3 Tim-Philipp Müller 2012-02-14 00:10:50 UTC
commit ac681a6efd8ee4f4046fb93764a351a87566cde2
Author: Raimo Järvi <raimo.jarvi@gmail.com>
Date:   Sat Aug 27 20:58:48 2011 +0300

    directdrawsink: Fix warnings on 64 bit mingw-w64
    
    gstdirectdrawsink.c:1561:24: error: assignment from incompatible pointer type
    gstdirectdrawsink.c:2028:3: error: format '%d' expects type 'int', but argument 8 has type 'size_t'
    
    https://bugzilla.gnome.org/show_bug.cgi?id=657522