directdrawsink: Fix warnings on 64 bit mingw-w64

gstdirectdrawsink.c:1561:24: error: assignment from incompatible pointer type
gstdirectdrawsink.c:2028:3: error: format '%d' expects type 'int', but argument 8 has type 'size_t'

https://bugzilla.gnome.org/show_bug.cgi?id=657522